ready for heroku

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph2" style="margin-top: 10px">Time Series</button>
                         <div id="graph2" class="collapse graph"></div>
 
-                        <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph3" style="margin-top: 10px">Boxplot</button>
+                        <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph3" style="margin-top: 10px">Average Monthly Count</button>
                         <div id="graph3" class="collapse graph"></div>
 
                         <button type="button" class="btn btn-sm btn-info collapsed btn-block" data-toggle="collapse" data-target="#graph4" style="margin-top: 10px">Arrest & Domestic Count</button>
