--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!--Leaflet CSS file references-->
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.7/leaflet.css" />
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="http://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
+    <script src="https://cdn.leafletjs.com/leaflet-0.7/leaflet.js"></script>
 
     <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
 
