add spacetimelab logo

--- a/data.html
+++ b/data.html
@@ -61,6 +61,10 @@
                 <select id="domestic" class="form-control"><option value="All" selected="selected" > -- ALL --</option>
                 </select>            
             </ul>
+
+            <ul class="list-unstyled" style="margin-left: 10px">
+                <img src="images/spacetimelab_logo.png">
+            </ul>
         </nav>
 
         <!-- Page Content  -->
