add spacetimelab logo and enabled cluster map

--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
                                 <a class="nav-link py-0" href="data.html">DATA</a>
                             </li>
                         </ul>
+
+                        <ul class="list-unstyled" style="margin-left: 10px">
+                            <img src="images/spacetimelab_logo.png">
+                        </ul>
                     </div>
                 </div>
             </nav>
