--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!--Leaflet CSS file references-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.5.1/leaflet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.0/leaflet.css" />
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.5.1/leaflet.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.0/leaflet.js"></script>
 
-    <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.5.0/MarkerCluster.css' rel='stylesheet' />
 
-	<link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
+	<link href='https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.5.0/MarkerCluster.Default.css' rel='stylesheet' />
 
-    <script src="https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/0.5.0/leaflet.markercluster.js"></script>
 
     <!--the following links incorporate the CSS required for custom icon creation -->
     <link rel="stylesheet" href="./css/ionicons.min.css">
@@ -106,10 +106,6 @@
                             <li class="nav-item">
                                 <a class="nav-link py-0" href="data.html">DATA</a>
                             </li>
-                        </ul>
-
-                        <ul class="list-unstyled" style="margin-left: 10px">
-                            <img src="images/spacetimelab_logo.png">
                         </ul>
                     </div>
                 </div>
