--- a/analysis.html
+++ b/analysis.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -63,20 +62,20 @@
 
             <ul class="list-unstyled components">
                 <label for="group"><b>Offence Group</b></label>
-                <select id="crimeType1" name="crimeType2" class="form-control" value="ARSON" onchange="loadPage()">
+                <select id="crimeType1" name="crimeType2" class="form-control" value="ARSON">
                 </select>
                 <label for="group"><b>Offence Group</b></label>
-                <select id="crimeType2" name="crimeType2" class="form-control" onchange="loadPage()">
+                <select id="crimeType2" name="crimeType2" class="form-control">
                 </select>
                 <label for="startDate"><b>Start Date</b></label>
-                <input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" value="2016-01-01" onchange="loadPage()">
+                <input autocomplete="off" type='text' class="form-control" id="startDate" name="startDate" value="2016-01-01">
                 <label for="endDate"><b>End Date</b></label>
-                <input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate" value="2019-07-31" onchange="loadPage()">
+                <input autocomplete="off" type='text' class="form-control" id="endDate" name="endDate" value="2019-07-31">
                 <label for="group"><b>Arrest</b></label>
-                <select id="arrest" class="form-control"><option value="All" selected="selected" onchange="loadPage()"> -- ALL --</option>
+                <select id="arrest" class="form-control"><option value="All" selected="selected" > -- ALL --</option>
                 </select>
                 <label for="group"><b>Domestic</b></label>
-                <select id="domestic" class="form-control"><option value="All" selected="selected" onchange="loadPage()"> -- ALL --</option>
+                <select id="domestic" class="form-control"><option value="All" selected="selected"> -- ALL --</option>
                 </select>            
             </ul>
 
